# cv_creator

./: .env  .env-template  .gitignore  README.rst  alembic.ini  notes.rst  pyproject.toml  user.http
alembic/: README.md  env.py
alembic/versions/: 5a4cacac453d_autogenerate2.py  6769950ec5d6_autogenerate.py  71fa07a49eb0_autogenerate.py  9d4ad2bdf538_autogenerate.py  9ecb338e1f93_added_user_experience_table.py  a2cbf939122d_postgres.py  a5fc1347a812_db_upgrade.py  a709dd2fee6a_init.py  b778e601ce0e_init.py  c22a0a88b4fa_postgres.py  c2bda9e4abec_init.py  c8913dd8ffdf_autogenerate.py  e1a9af0882ca_init.py
cv_creator/: app.py  config.py  database.py  models.py  routes.py  serializers.py
cv_creator/controllers/: cv_controller.py  skill_controller.py  stats_controller.py  user_controller.py
cv_creator/doc/: delete_user.yml  get_stats.yml  get_user.yml  patch_user.yml  post_user.yml
cv_creator/models/: db_models.py  models.py
cv_creator/schema/api_schema/: api_serializers.py
cv_creator/schema/db_schema/: db_serializers.py
cv_creator/serializers/: api_serializers.py  api_serializers_old.py  db_serializers.py  db_serializers_marshmallow.py
cv_creator/storage/postgres/: __init__.py  database.py  db_models.py  repository.py  skill_repository.py  stats_repository.py  user_experience_repository.py  user_repository.py
flaskapp/: app.py  cv_creator.py  database.py  db.py  models.py  routes.py  serializers.py
tests/: conftest.py  test_app.py  test_cv_creator.py  test_routes.py
tests/test_controllers/: test_user_controller.py
tests/test_models/: test_models.py
