[tool.poetry]
name = "cv_creator"
version = "0.1.0"
description = ""
authors = ["Sebastian Przesmycki <temp_mail>"]

[tool.poetry.dependencies]
python = "^3.10.7"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.40"
marshmallow-sqlalchemy = "^0.28.1"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.4"
marshmallow-dataclass = "^8.5.8"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
